# Mini-vla-scratch

./: .env.example  .gitignore  CHANGELOG.md  PLAN.md  PROJECT_PRINCIPLES.md  README.md  ROADMAP.md  SETUP.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup_env.ps1  setup_env.sh
configs/: base.yaml
configs/data/: episode_robot.yaml  toy_2d.yaml
configs/model/: mini_vla_cnn_gru.yaml  mini_vla_cnn_llm.yaml  mini_vla_resnet_gru.yaml
configs/train/: debug.yaml  default.yaml
docs/: 00_project_scope.md  01_data_format.md  02_model_architecture.md  03_training_pipeline.md  04_inference_and_rollout.md  05_open_kaka_integration.md  07_lightweight_vla_research.md
mini_vla/: __init__.py
mini_vla/config/: __init__.py  loader.py  schema.py
mini_vla/datasets/: __init__.py  collate.py  episode_dataset.py  toy_2d_dataset.py  transforms.py
mini_vla/inference/: predictor.py  rollout.py  visualizer.py
mini_vla/models/: __init__.py  action_head.py  builder.py  fusion.py  language_encoder.py  mini_vla.py  state_encoder.py  vision_encoder.py
mini_vla/robot_interface/: __init__.py  action_adapter.py  fake_robot.py  open_kaka_adapter.py  safety_wrapper.py
mini_vla/training/: checkpoint.py  optimizer.py  trainer.py
scripts/: evaluate.py  generate_toy_data.py  infer_one.py  rollout_fake_robot.py  train.py
tests/: test_action_adapter.py  test_config_loader.py  test_dataset.py  test_generate_toy_data.py  test_model_builder.py  test_model_components.py  test_model_forward.py  test_text_encoder.py  test_trainer.py  test_vision_encoder.py
(+4 files in other folders)
