[project]
name = "mini-vla-from-scratch"
version = "0.1.0"
description = "A minimal Vision-Language-Action framework from scratch for robot action prediction."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Wu Weixing" }
]

[tool.setuptools.packages.find]
include = ["mini_vla*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
